--- a/About us.html
+++ b/About us.html
@@ -9,17 +9,17 @@
 </head>
 <body style="background-image: url(assets/about-bg.png); background-size: 100%; ">
 	<nav class="navigation-bar">
-		<ul>
-			<li class="logo">
-				<img src="assets\logo.png" alt="logo">
-			</li>
-			<li class="options"><a href="Home.html">Home</a></li>
+        <ul>
+            <li class="logo">
+                <img src="assets\logo.png" alt="logo">
+            </li>
+            <li class="options"><a href="index.html">Home</a></li>
             <li class="options healthy"><a href="healthy.html">Healthy</a></li>
             <li class="options"><a href="Contact us.html">contact</a></li>
             <li class="options"><a href="About us.html">about us</a></li>
-		</ul>
-		<a href="login.html" class="login options">Login now</a>
-	</nav>
+        </ul>
+        <a href="login.html" class="login options" style="height: 100%;">Login now</a>
+    </nav>
 
 	<div class="about-contaner">
 		<div class="about">
@@ -72,7 +72,7 @@
 			<br>
 			<p class="last">
 				Enjoy the experience of Arabic cuisine through our website and discover how you can easily prepare these delicious dishes at
-				<a href="Home.html">home</a>!
+				<a href="index.html">home</a>!
 			</p>
 		</div>
 	</div>
