--- a/Contact us.html
+++ b/Contact us.html
@@ -11,17 +11,16 @@
 <body>
     <link rel="stylesheet" href="styles\mainStyle.css">
     <nav class="navigation-bar">
-        
         <ul>
             <li class="logo">
                 <img src="assets\logo.png" alt="logo">
             </li>
-            <li class="options"><a href="Home.html">Home</a></li>
+            <li class="options"><a href="index.html">Home</a></li>
             <li class="options healthy"><a href="healthy.html">Healthy</a></li>
             <li class="options"><a href="Contact us.html">contact</a></li>
             <li class="options"><a href="About us.html">about us</a></li>
         </ul>
-        <a href="login.html" class="login options">Login now</a>
+        <a href="login.html" class="login options" style="height: 100%;">Login now</a>
     </nav>
 
     <div class="container">
