--- a/Tagine.html
+++ b/Tagine.html
@@ -53,7 +53,7 @@
         <li class="logo">
           <img src="assets\logo.png" alt="logo" />
         </li>
-        <li class="options"><a href="Home.html">Home</a></li>
+        <li class="options"><a href="index.html">Home</a></li>
         <li class="options healthy"><a href="healthy.html">BMI test</a></li>
         <li class="options"><a href="Contact us.html">Contact</a></li>
         <li class="options"><a href="About us.html">About Us</a></li>
