--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <a href="Home.html">
+    <a href="index.html">
         <img src="assets/backArrow.png" alt="back" style="width: 40px; margin: 10px 0 0 10px; padding: 10px; background-color: white; border-radius: 50%; box-shadow: 0 0 10px white;">
     </a>
     <form onsubmit="return checkForm()">
